--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,11 +5,11 @@ name: Test_Checkout_other_Pvt_Repo
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ main ]
+    branches: [ main1 ]
     paths:
       - 'themes/lutsk-aspose-theme/**'
   pull_request:
-    branches: [ main ]
+    branches: [ main1 ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
