--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,11 @@ jobs:
     steps:
 
     # Step 1 - Checks-out your repository under $GITHUB_WORKSPACE
-    - name: Checkout
-      uses: actions/checkout@v2
+    - name: Check out other private repo
+      uses: actions/checkout@main
       with:
-          submodules: true  # Fetch Hugo themes
+          repository: Aspose/products.aspose.com
+          token: ${{ secrets.REPO_TOKEN }}
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
     # Step 2 - Sets up the latest version of Hugo
