--- a/.github/workflows/staging-tasks.yml
+++ b/.github/workflows/staging-tasks.yml
@@ -1,4 +1,4 @@
-name: Staging-Words
+name: Staging-Tasks
 
 on:
   repository_dispatch:
@@ -42,18 +42,10 @@ jobs:
         find: "logoImageSrc=\"https://www.aspose.cloud/"
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
-    - name: Build Words
-      run: hugo --config "./config.toml" -c "content/words" -b "https://products-qa.aspose.com/words" --cleanDestinationDir --minify
-    - name: Deploy Words to S3
-      run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "words" --force
+    - name: Build Tasks
+      run: hugo --config "./config.toml" -c "content/tasks" -b "https://products-qa.aspose.com/tasks" --cleanDestinationDir --minify
+    - name: Deploy Tasks to S3
+      run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "tasks" --force
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
-    - name: Invalidate CloudFront
-      uses: chetan/invalidate-cloudfront-action@v2
-      env:
-        DISTRIBUTION: ${{ secrets.AWS_DISTRIBUTION_STAGE }}
-        PATHS: "/words/*"
-        AWS_REGION: "us-west-2"
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
