fixes for workflow & config names

--- a/.github/workflows/production-cells-linux.yml
+++ b/.github/workflows/production-cells-linux.yml
@@ -1,8 +1,6 @@
-name: Production-Cells
+name: Production-Cells-Linux
 
 on:
-  repository_dispatch:
-    types: [production-complete]
   workflow_dispatch:
 
 jobs:
