--- a/.github/workflows/staging-cells-linux.yml
+++ b/.github/workflows/staging-cells-linux.yml
@@ -41,9 +41,9 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build Cells
-      run: hugo --config "./config-i18n.toml" -c "content/cells" -b "https://products-qa.aspose.com/cells" --cleanDestinationDir --minify
+      run: hugo --config "./config-i18n-cells.toml" -c "content/cells" -b "https://products-qa.aspose.com/cells" --cleanDestinationDir --minify
     - name: Deploy Cells to S3
-      run: hugo deploy --config "./config-i18n.toml" --maxDeletes=-1 --target "cells" --force
+      run: hugo deploy --config "./config-i18n-cells.toml" --maxDeletes=-1 --target "cells" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
