--- a/.github/workflows/staging-imaging-custom.yml
+++ b/.github/workflows/staging-imaging-custom.yml
@@ -42,6 +42,7 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build Imaging
+      timeout-minutes: 60
       run: hugo --config "./config.toml" -c "content/imaging" -b "https://products-qa.aspose.com/imaging" --cleanDestinationDir --minify
     - name: Deploy Imaging to S3
       run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "imaging" --force
