--- a/.github/workflows/staging-imaging-macos.yml
+++ b/.github/workflows/staging-imaging-macos.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   deploy:
     runs-on: macos-latest
-    timeout-minutes: 360
     steps:
     - name: Checkout theme repo
       uses: actions/checkout@main
@@ -30,20 +29,11 @@ jobs:
         find: "url:"
         replace: "url_ignore:"
         include: "_index.md"
+    - name: Find and replace url param in frontmatter
+      run: find . -type f -name '*.md' -exec sed -i '' s/url:/url_ignore:/g {} +
     - name: Find and replace domain name
-      uses: jacobtomlinson/gha-find-replace@master
-      with:
-        find: "products.aspose.com"
-        replace: "products-qa.aspose.com"
-        include: "_index.md"
-    - name: Find and replace image url domain
-      uses: jacobtomlinson/gha-find-replace@master
-      with:
-        find: "logoImageSrc=\"https://www.aspose.cloud/"
-        replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
-        include: "_index.md"
+      run: find . -type f -name '*.md' -exec sed -i '' s/products.aspose.com/products-qa.aspose.com/g {} +
     - name: Build Imaging
-      timeout-minutes: 60
       run: hugo --config "./config.toml" -c "content/imaging" -b "https://products-qa.aspose.com/imaging" --cleanDestinationDir --minify --verbose --printMemoryUsage
     - name: Deploy Imaging to S3
       run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "imaging" --force
