--- a/.github/workflows/staging-imaging-macos.yml
+++ b/.github/workflows/staging-imaging-macos.yml
@@ -12,7 +12,7 @@ jobs:
       with:
           repository: Aspose/products.aspose.com
           token: ${{ secrets.REPO_TOKEN }}
-          ref: samer.el-khatib.IMAGINGNET-5114_3
+          ref: samer.el-khatib.IMAGINGNET-5114_all
           fetch-depth: 0 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
@@ -22,13 +22,11 @@ jobs:
     - name: Install autoprefixer
       run:  npm install -D --save autoprefixer
     - name: Install postcss-cli
-      run:  npm install -D --save postcss-cli
-    - name: Find and replace url param in frontmatter
-      run: find . -type f -name '*.md' -exec sed -i '' s/url:/url_ignore:/g {} +
+      run:  npm install -D --save postcss-cli    
     - name: Find and replace domain name
       run: find . -type f -name '*.md' -exec sed -i '' s/products.aspose.com/products-qa.aspose.com/g {} +
     - name: Build Imaging
-      run: hugo --config "./config.toml" -c "content/imaging" -b "https://products-qa.aspose.com/imaging" --cleanDestinationDir --minify --verbose --printMemoryUsage
+      run: hugo --config "./config.toml" -c "content/imaging" -b "https://products-qa.aspose.com/imaging" --cleanDestinationDir --minify
     - name: Deploy Imaging to S3
       run: hugo deploy --config "./config.toml" --maxDeletes=-1 --target "imaging" --force
       env:
