--- a/.github/workflows/staging-slides.yml
+++ b/.github/workflows/staging-slides.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - name: Checkout theme repo
       uses: actions/checkout@main
@@ -25,23 +25,9 @@ jobs:
     - name: Install postcss-cli
       run:  npm install -D --save postcss-cli
     - name: Find and replace url param in frontmatter
-      uses: jacobtomlinson/gha-find-replace@master
-      with:
-        find: "url:"
-        replace: "url_ignore:"
-        include: "_index.md"
+      run: find . -type f -name '*.md' -exec sed -i '' s/url:/url_ignore:/g {} +
     - name: Find and replace domain name
-      uses: jacobtomlinson/gha-find-replace@master
-      with:
-        find: "products.aspose.com"
-        replace: "products-qa.aspose.com"
-        include: "_index.md"
-    - name: Find and replace image url domain
-      uses: jacobtomlinson/gha-find-replace@master
-      with:
-        find: "logoImageSrc=\"https://www.aspose.cloud/"
-        replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
-        include: "_index.md"
+      run: find . -type f -name '*.md' -exec sed -i '' s/products.aspose.com/products-qa.aspose.com/g {} +
     - name: Build Slides
       run: hugo --config "configs/slides.toml" -c "content/slides" -b "https://products-qa.aspose.com/slides" --cleanDestinationDir --minify
     - name: Deploy Slides to S3
