--- a/.github/workflows/staging-zip.yml
+++ b/.github/workflows/staging-zip.yml
@@ -25,19 +25,19 @@ jobs:
     - name: Install postcss-cli
       run:  npm install -D --save postcss-cli
     - name: Find and replace url param in frontmatter
-      uses: jacobtomlinson/gha-find-replace@master
+      uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "url:"
         replace: "url_ignore:"
         include: "_index.md"
     - name: Find and replace domain name
-      uses: jacobtomlinson/gha-find-replace@master
+      uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "products.aspose.com"
         replace: "products-qa.aspose.com"
         include: "_index.md"
     - name: Find and replace image url domain
-      uses: jacobtomlinson/gha-find-replace@master
+      uses: jacobtomlinson/gha-find-replace@v2
       with:
         find: "logoImageSrc=\"https://www.aspose.cloud/"
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
