Fix path to imaging.toml

--- a/.github/workflows/staging-imaging-macos.yml
+++ b/.github/workflows/staging-imaging-macos.yml
@@ -26,9 +26,9 @@ jobs:
     - name: Find and replace domain name
       run: find . -type f -name '*.md' -exec sed -i '' s/products.aspose.com/products-qa.aspose.com/g {} +
     - name: Build Imaging
-      run: hugo --config "./config/imaging.toml" -c "content/imaging" -b "https://products-qa.aspose.com/imaging" --cleanDestinationDir --minify
+      run: hugo --config "./configs/imaging.toml" -c "content/imaging" -b "https://products-qa.aspose.com/imaging" --cleanDestinationDir --minify
     - name: Deploy Imaging to S3
-      run: hugo deploy --config "./config/imaging.toml" --maxDeletes=-1 --target "staging" --force
+      run: hugo deploy --config "./configs/imaging.toml" --maxDeletes=-1 --target "staging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
