--- a/.github/workflows/staging-home.yml
+++ b/.github/workflows/staging-home.yml
@@ -43,9 +43,27 @@ jobs:
         replace: "logoImageSrc=\"https://cms.admin.containerize.com/"
         include: "_index.md"
     - name: Build Home
-      run: hugo --config "configs/home.toml" -c "content" -b "https://products-qa.aspose.com" --cleanDestinationDir --minify
-    - name: Deploy Home to S3
-      run: hugo deploy --config "configs/home.toml" --maxDeletes=-1 --target "staging" --force
+      run: hugo --config "configs/home.toml" -b "https://products-qa.aspose.com" --cleanDestinationDir --minify
+    - name: Upload default language
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
       env:
+        AWS_S3_BUCKET: 'products-qa.aspose.com'
+        AWS_ACCESS_KEY_ID:  ${{ secrets.ACCESS_KEY }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
+        AWS_REGION: 'us-west-2'
+        SOURCE_DIR: 'public/'
+        DEST_DIR: '/' 
+        
+    - name: Upload en sitemap
+      uses: swimlane/s3-upload-file-action@main
+      with:
+        aws_access_key_id: ${{ secrets.ACCESS_KEY }}
+        aws_secret_access_key: ${{ secrets.SECRET_ACCESS}}
+        aws_bucket: 'products-qa.aspose.com'
+        file_path: 'public/en/sitemap.xml'
+        file_mime_type: 'application/xml'
+        dest_dir: 'en'
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
